# python-short-circuit

./: LICENSE.md  README.md  pyproject.toml
docs/examples/: short-circuit-3ph_01.ipynb
docs/examples/jupyter_notebooks/: ex1_symmetrical_faults.ipynb  ex2_unsymmetrical_faults.ipynb  ex3_unsymmetrical_faults.ipynb  ex4_unsymmetrical_faults.ipynb
docs/examples/python_scripts/: 01_RL_circuit.py  02_synchronous_generator.py  03_symmetrical_faults_01.py  04_symmetrical_faults_02a.py  05_symmetrical_faults_02b.py  06_circuit_breaker.py  07_three_phase_short_circuit.py  08_single_line_to_ground.py  09_line_to_line.py  10_double_line_to_ground.py  11_unsymmetrical_faults.py
short_circuit/: __init__.py  circuit_breaker.py  equipment.py  network.py  open_conductor.py  paschen.py  per_unit.py  three_phase_fault.py  unsymmetrical_faults.py
short_circuit/arc_flash/: arc_flash.py
short_circuit/basics/: RL_circuit.py  synchronous_machine.py
short_circuit/charts/: __init__.py
short_circuit/charts/matplotlibwrapper/: axes.py  chart_2D.py
short_circuit/core/: __init__.py  complex_number_formatting.py  doc_string_formatting.py  format_complex.py  quantity.py
short_circuit/equipment/: __init__.py  circuit_breaker.py  equipment.py
short_circuit/faults/: __init__.py  open_conductor.py  three_phase_fault.py  unsymmetrical_faults.py
short_circuit/network/: __init__.py  network.py  per_unit.py
