[project]
name = "short_circuit"
version = "0.1.0"
description = "Python library for short-circuit calculations"
authors = [
    {name = "Tom Christiaens",email = "tom.chr@proximus.be"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.2,<3.0)",
    "pint (>=0.24,<1.0)",
    "jupyter (>=1.1,<2.0)",
    "pandas (>=2.2,<3.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
